--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html lang="en">
 	<head>
-		<title>MIC Conference - Fall 2018</title>
+		<title>MIC Conference - Nov. 3rd 2018</title>
 		<meta name="viewport" content="width=device-width" />
 		<link href="https://fonts.googleapis.com/css?family=Lato:100,400,700,900" rel="stylesheet">
 		<link rel="stylesheet" href="css/style.css">
@@ -11,13 +11,12 @@
 		<nav id="hidden-nav">
 			<ul>
 				<li><h3>Menu</h3></li>
-				<li><a href="#speakers">Speakers</a></li>
 				<li><a href="#location-info">Location Info</a></li>
-				<li><a href="#mic-schools">MIC Schools</a></li>
+				<li><a href="#our-community">Our Community</a></li>
 				<li><a href="#sponsors">Sponsors</a></li>
 			</ul>
 			<div class="cta">
-				<a href="#" class="cta-button">Attend</a>
+				<a href="https://www.eventbrite.com/" class="cta-button">Attend</a>
 				<a href="#" class="cta-button">Become a Sponsor</a>
 			</div>
 		</nav>
@@ -32,74 +31,23 @@
 						</div>
 						<div class="heading">
 							<div class="main-heading">
-								<h1>The Machine Intelligence Community Conference</h1>
+								<h1>The Machine Intelligence Conference</h1>
 							</div>
 							<div class="sub-heading">
-								<h2>Fall 2018 - MIT Media Lab</h2>
+								<h2>Nov. 3rd 2018 - MIT Media Lab</h2>
 							</div>
 						</div>
 					</div>
 					<div class="cta">
-						<a href="#" class="cta-button">Attend</a>
+						<a href="https://www.eventbrite.com/" class="cta-button">Attend</a>
 					</div>
 				</div>
 			</section>
-			<section id="speakers">
+
+			<section id="about">
 				<div class="container">
 					<div class="section-head">
-						<h2>Speakers</h2>
-					</div>
-					<div class="speaker-grid">
-						<div class="speaker-tile">
-							<img src="images/speaker-holder.png" alt="speaker" class="speaker">
-							<div class="info">
-								<div class="speaker-head">
-									<p class="name">Full Name</p>
-									<p class="title">Professional Title</p>
-								</div>
-								<p class="about">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit.</p>
-							</div>
-						</div>
-						<div class="speaker-tile mobile-reverse">
-							<div class="info">
-								<div class="speaker-head">
-									<p class="name">Full Name</p>
-									<p class="title">Professional Title</p>
-								</div>
-								<p class="about">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit.</p>
-							</div>
-							<img src="images/speaker-holder.png" alt="speaker" class="speaker">
-						</div>
-						<div class="speaker-tile">
-							<img src="images/speaker-holder.png" alt="speaker" class="speaker">
-							<div class="info">
-								<div class="speaker-head">
-									<p class="name">Full Name</p>
-									<p class="title">Professional Title</p>
-								</div>
-								<p class="about">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit.</p>
-							</div>
-						</div>
-						<div class="speaker-tile mobile-reverse">
-							<div class="info">
-								<div class="speaker-head">
-									<p class="name">Full Name</p>
-									<p class="title">Professional Title</p>
-								</div>
-								<p class="about">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit.</p>
-							</div>
-							<img src="images/speaker-holder.png" alt="speaker" class="speaker">
-						</div>
-						<div class="speaker-tile">
-							<img src="images/speaker-holder.png" alt="speaker" class="speaker">
-							<div class="info">
-								<div class="speaker-head">
-									<p class="name">Full Name</p>
-									<p class="title">Professional Title</p>
-								</div>
-								<p class="about">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit.</p>
-							</div>
-						</div>
+						<h2>About The Conference</h2>
 					</div>
 				</div>
 			</section>
@@ -112,7 +60,8 @@
 					<div class="columns">
 						<div class="description">
 							<h3>MIT Media Lab</h3>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+							<p>"The MIT Media Lab is an interdisciplinary research laboratory at the Massachusetts Institute of Technology, growing out of MIT's Architecture Machine Group in the School of Architecture. Its research draws from technology, media, science, art and design. As of 2014, research groups included neurobiology, biologically inspired fabrication, socially engaging robots, emotive computing, bionics, and hyperinstruments" - Wikipedia</p>
+							<p><strong>Address:</strong> 75 Amherst St, Cambridge, MA 02139</p>
 						</div>
 						<div class="map">
 							<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2948.1632077775325!2d-71.08945804902301!3d42.36036094297315!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89e370a8b0f310c5%3A0x1a26a6e6bd5f8030!2sMIT+Media+Lab!5e0!3m2!1sen!2sus!4v1518495709713" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
@@ -122,46 +71,46 @@
 				</div>
 			</section>
 
-			<section id="mic-schools">
+			<section id="our-community">
 				<div class="container">
 					<div class="section-head">
-						<h2>MIC Schools</h2>
+						<h2>Our Community</h2>
 					</div>
 					<div class="school-grid">
 						<div class="school-tile">
 							<div class="shield">
-								<img src="images/mit-logo.gif" alt="MIT Logo">
+								<img src="images/mic-schools/mit-logo.gif" alt="MIT Logo">
 							</div>
 							<div class="description">
-								<p class="school-name">MIT</p>
-								<p>Vestibulum vestibulum nunc ut ligula consectetur ullamcorper. Sed aliquet fermentum turpis, et feugiat quam sodales ac. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. In elementum velit felis, ut ultrices nulla pulvinar sit amet. </p>
+								<p class="school-name">Massachusetts Institute of Technology</p>
+								<p>We are a community of undergraduates aimed at promoting and fostering the growing interest around machine intelligence on campus. We currently hold weekly discussions on the latest papers in the field, and also plan to organize crash courses, host speakers, and arrange competitions around machine intelligence at MIT.</p>
 							</div>
 						</div>
 						<div class="school-tile">
 							<div class="shield">
-								<img src="images/bu-logo.png" alt="Boston University Logo">
+								<img src="images/mic-schools/bu-logo.png" alt="Boston University Logo">
 							</div>
 							<div class="description">
 								<p class="school-name">Boston University</p>
-								<p>Vestibulum vestibulum nunc ut ligula consectetur ullamcorper. Sed aliquet fermentum turpis, et feugiat quam sodales ac. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. In elementum velit felis, ut ultrices nulla pulvinar sit amet. </p>
+								<p>Boston University Machine Intelligence Community is an organization focused on providing opportunities for undergraduate and graduate students to learn about machine intelligence in a community environment. We are a student-led research group sponsored by Boston University's Rafik B. Hariri Institute for Computing and Computational Science and Engineering, BU Software Application and Innovation Lab (SAIL), and BU Spark.</p>
 							</div>
 						</div>
 						<div class="school-tile">
 							<div class="shield">
-								<img src="images/harvard-logo.png" alt="Harvard Logo">
+								<img src="images/mic-schools/harvard-logo.png" alt="Harvard Logo">
 							</div>
 							<div class="description">
-								<p class="school-name">Harvard</p>
-								<p>Vestibulum vestibulum nunc ut ligula consectetur ullamcorper. Sed aliquet fermentum turpis, et feugiat quam sodales ac. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. In elementum velit felis, ut ultrices nulla pulvinar sit amet. </p>
+								<p class="school-name">Harvard University</p>
+								<p>We are a community of undergraduates at Harvard aiming to promote and foster interest in machine learning and artificial intelligence. We host technical workshops on advanced topics in machine learning, work on challenging real-world problems, discuss the current state of the field, and - most importantly - attempt to create a friendly and collaborative environment both for aspiring machine learning researchers and also for people who have just taken their first step into the fascinating and mysterious world of artificial intelligence. We seek to equip everyone with knowledge in machine learning and artificial intelligence and prepare them to face the new wave of the future.</p>
 							</div>
 						</div>
 						<div class="school-tile">
 							<div class="shield">
-								<img src="images/tufts-logo.png" alt="Tufts logo">
+								<img src="images/mic-schools/tufts-logo.png" alt="Tufts logo">
 							</div>
 							<div class="description">
-								<p class="school-name">Tufts</p>
-								<p>Vestibulum vestibulum nunc ut ligula consectetur ullamcorper. Sed aliquet fermentum turpis, et feugiat quam sodales ac. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. In elementum velit felis, ut ultrices nulla pulvinar sit amet. </p>
+								<p class="school-name">Tufts University</p>
+								<p>Machine Intelligence Community aims to foster interest and research in deep learning, machine learning, and artificial intelligence. Tufts offers several courses dealing more broadly with machine learning, but currently no focused curriculum for modern deep learning. We will be hosting workshops and guest lecturers in addition to coordinating group coding projects. We'll be working alongside other MIC chapters at MIT, BU and Harvard as well, and are currently organizing a student conference for Fall 2018.</p>
 							</div>
 						</div>
 					</div>
@@ -175,28 +124,7 @@
 					</div>
 					<div class="sponsor-grid">
 						<div class="sponsor-tile">
-							<img src="images/logo-holder.png" alt="Logo">
-						</div>
-						<div class="sponsor-tile">
-							<img src="images/logo-holder.png" alt="Logo">
-						</div>
-						<div class="sponsor-tile">
-							<img src="images/logo-holder.png" alt="Logo">
-						</div>
-						<div class="sponsor-tile">
-							<img src="images/logo-holder.png" alt="Logo">
-						</div>
-						<div class="sponsor-tile">
-							<img src="images/logo-holder.png" alt="Logo">
-						</div>
-						<div class="sponsor-tile">
-							<img src="images/logo-holder.png" alt="Logo">
-						</div>
-						<div class="sponsor-tile">
-							<img src="images/logo-holder.png" alt="Logo">
-						</div>
-						<div class="sponsor-tile">
-							<img src="images/logo-holder.png" alt="Logo">
+							<a href="https://www.malong.com/" target="_blank" rel="noopener noreferrer"><img src="images/sponsors/malong-technologies-logo.png" alt="Malong Technologies Logo"></a>
 						</div>
 					</div>
 					<div class="become-sponsor">
@@ -208,28 +136,29 @@
 		
 		<footer>
 			<div class="container">
-				<div class="columns">
-					<div class="left">
+				<div class="rows">
+					<div class="top">
 						<div class="logo">
 							<img src="images/mic-logo.png" alt="MIC Conference Logo">
 						</div>
-						<p class="copyright">&copy; Copyright 2018</p>	
-					</div>
-					<div class="right">
 						<div class="cta">
-							<a href="#" class="cta-button">Attend</a>
+							<a href="https://www.eventbrite.com/" class="cta-button">Attend</a>
 						</div>
+					</div>
+					<div class="bottom">
+						<p class="copyright">&copy; Copyright 2018</p>	
+						<a class="code-of-conduct" href="http://confcodeofconduct.com/"> Conference Code of Conduct</a>
 						<div class="social-links">
-							<a href="#"><img src="images/facebook-icon.png" alt=""></a>
-							<a href="#"><img src="images/twitter-icon.png" alt=""></a>
-							<a href="#"><img src="images/medium-icon.png" alt=""></a>
+							<a href="https://www.facebook.com/events/171944180104861/"><img src="images/social-media-icons/facebook-icon.png" alt=""></a>
+							<a href="https://twitter.com/@bumic_"><img src="images/social-media-icons/twitter-icon.png" alt=""></a>
+							<a href="https://medium.com/mit-mic"><img src="images/social-media-icons/medium-icon.png" alt=""></a>
 						</div>
 					</div>
 				</div>
 			</div>
 		</footer>
 		<script src="js/particles/particles.min.js"></script>
-		<script src="js/particles/demo/js/app.js"></script>
+		<script src="js/particles/app.js"></script>
 		<script>
 			var nav = document.getElementsByTagName('nav')[0];
 
