Added content to about section and a favicon

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 	<head>
 		<title>MIC Conference - Nov. 3rd 2018</title>
 		<meta name="viewport" content="width=device-width" />
+		<link rel="shortcut icon" type="image/png" href="images/favicon.png"/>
 		<link href="https://fonts.googleapis.com/css?family=Lato:100,400,700,900" rel="stylesheet">
 		<link rel="stylesheet" href="css/style.css">
 		<link rel="stylesheet" href="css/mobile.css">
@@ -11,6 +12,7 @@
 		<nav id="hidden-nav">
 			<ul>
 				<li><h3>Menu</h3></li>
+				<li><a href="#about">About</a></li>
 				<li><a href="#location-info">Location Info</a></li>
 				<li><a href="#our-community">Our Community</a></li>
 				<li><a href="#sponsors">Sponsors</a></li>
@@ -47,7 +49,18 @@
 			<section id="about">
 				<div class="container">
 					<div class="section-head">
-						<h2>About The Conference</h2>
+						<h2>About</h2>
+					</div>
+					<div class="about-conference">
+						<h3>This Conference</h3>
+						<p>The Machine Intelligence Conference is held annually by all constituent MIC schools. Our mission for this conference is to bring together students, professors, and industry professionals to network and accelerate progress in artificial intelligence.</p>
+					</div>
+					<div class="about-mic">
+						<h3>The Machine Intelligence Community - MIC</h3>
+						<p>The idea behind the Machine Intelligence Community originated from the MIT Machine Learning Reading Group. The reading group started with students looking for an environment to learn about research advances in machine learning. The Machine Intelligence Community currently has branches at MIT, Boston University, Harvard, and Tufts.</p>
+						<p>The Machine Intelligence Community has a set of core values it stands to uphold. All Machine Intelligence Community organizations must uphold these values.</p>
+						<p><strong>1. Openness.</strong> The Machine Intelligence Community is inclusive and diverse. We welcome everyone and encourage minorities to join us.</p><p><strong>2. Education First.</strong> We aim to provide surface area for intellectual engagement. Our primary focus is teaching members and the community at-large about machine intelligence.</p>
+						<p><strong>3. Community.</strong> By doing this, we hope to cultivate and connect communities and like-minded students to accelerate progress in machine intelligence.</p>
 					</div>
 				</div>
 			</section>
