--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html lang="en">
 	<head>
-		<title>MIC Conference - Nov. 3rd 2018</title>
+		<title>MIC Conference - Nov. 3rd, 2018</title>
 		<meta name="viewport" content="width=device-width" />
 		<link rel="shortcut icon" type="image/png" href="images/favicon.png"/>
 		<link href="https://fonts.googleapis.com/css?family=Lato:100,400,700,900" rel="stylesheet">
@@ -33,10 +33,10 @@
 						</div>
 						<div class="heading">
 							<div class="main-heading">
-								<h1>The Machine Intelligence Conference</h1>
+								<h1>Machine Intelligence Conference</h1>
 							</div>
 							<div class="sub-heading">
-								<h2>Nov. 3rd 2018 - MIT Media Lab</h2>
+								<h2>Nov. 3rd, 2018 - MIT Media Lab</h2>
 							</div>
 						</div>
 					</div>
@@ -53,13 +53,13 @@
 					</div>
 					<div class="about-conference">
 						<h3>This Conference</h3>
-						<p>The Machine Intelligence Conference is held annually by all constituent MIC schools. Our mission for this conference is to bring together students, professors, and industry professionals to network and accelerate progress in artificial intelligence.</p>
+						<p>The Machine Intelligence Conference will be held annually by all constituent MIC schools. Our mission for this conference is to bring together students, professors, and industry professionals to network and accelerate progress in artificial intelligence.</p>
 					</div>
 					<div class="about-mic">
 						<h3>The Machine Intelligence Community - MIC</h3>
 						<p>The idea behind the Machine Intelligence Community originated from the MIT Machine Learning Reading Group. The reading group started with students looking for an environment to learn about research advances in machine learning. The Machine Intelligence Community currently has branches at MIT, Boston University, Harvard, and Tufts.</p>
 						<p>The Machine Intelligence Community has a set of core values it stands to uphold. All Machine Intelligence Community organizations must uphold these values.</p>
-						<p><strong>1. Openness.</strong> The Machine Intelligence Community is inclusive and diverse. We welcome everyone and encourage minorities to join us.</p><p><strong>2. Education First.</strong> We aim to provide surface area for intellectual engagement. Our primary focus is teaching members and the community at-large about machine intelligence.</p>
+						<p><strong>1. Openness.</strong> The Machine Intelligence Community is inclusive and diverse.</p><p><strong>2. Education First.</strong> We aim to provide surface area for intellectual engagement. Our primary focus is teaching members and the community at-large about machine intelligence.</p>
 						<p><strong>3. Community.</strong> By doing this, we hope to cultivate and connect communities and like-minded students to accelerate progress in machine intelligence.</p>
 					</div>
 				</div>
@@ -92,7 +92,7 @@
 					<div class="school-grid">
 						<div class="school-tile">
 							<div class="shield">
-								<img src="images/mic-schools/mit-logo.gif" alt="MIT Logo">
+								<a href="http://machine-intelligence.mit.edu/"><img src="images/mic-schools/mit-logo.gif" alt="MIT Logo"></a>
 							</div>
 							<div class="description">
 								<p class="school-name">Massachusetts Institute of Technology</p>
@@ -101,7 +101,7 @@
 						</div>
 						<div class="school-tile">
 							<div class="shield">
-								<img src="images/mic-schools/bu-logo.png" alt="Boston University Logo">
+								<a href="http://mic.bu.edu/"><img src="images/mic-schools/bu-logo.png" alt="Boston University Logo"></a>
 							</div>
 							<div class="description">
 								<p class="school-name">Boston University</p>
@@ -110,7 +110,7 @@
 						</div>
 						<div class="school-tile">
 							<div class="shield">
-								<img src="images/mic-schools/harvard-logo.png" alt="Harvard Logo">
+								<a href="https://harvard-mic.github.io/"><img src="images/mic-schools/harvard-logo.png" alt="Harvard Logo"></a>
 							</div>
 							<div class="description">
 								<p class="school-name">Harvard University</p>
@@ -119,7 +119,7 @@
 						</div>
 						<div class="school-tile">
 							<div class="shield">
-								<img src="images/mic-schools/tufts-logo.png" alt="Tufts logo">
+								<a href="https://tufts-mic.github.io/MIC-site/"><img src="images/mic-schools/tufts-logo.png" alt="Tufts logo"></a>
 							</div>
 							<div class="description">
 								<p class="school-name">Tufts University</p>
