New logo and tufts statement

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 							</div>
 							<div class="description">
 								<p class="school-name">Tufts University</p>
-								<p>Machine Intelligence Community aims to foster interest and research in deep learning, machine learning, and artificial intelligence. Tufts offers several courses dealing more broadly with machine learning, but currently no focused curriculum for modern deep learning. We will be hosting workshops and guest lecturers in addition to coordinating group coding projects. We'll be working alongside other MIC chapters at MIT, BU and Harvard as well, and are currently organizing a student conference for Fall 2018.</p>
+								<p>Tufts offers several courses dealing more broadly with machine learning, but currently no focused curriculum geared towards modern deep learning. Tufts MIC aims to foster interest and research in machine intelligence on campus in an undergraduate-friendly environment. We host workshops and guest lecturers, coordinate group coding projects, and collaborate with the Tufts Machine Learning Reading Group to cover the latest machine intelligence breakthroughs.</p>
 							</div>
 						</div>
 					</div>
