Added conference committee section

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 				<li><a href="#location-info">Location Info</a></li>
 				<li><a href="#our-community">Our Community</a></li>
 				<li><a href="#sponsors">Sponsors</a></li>
+				<li><a href="#committee">Conference Committee</a></li>
 			</ul>
 			<div class="cta">
 				<a href="https://www.eventbrite.com/" class="cta-button">Attend</a>
@@ -145,6 +146,73 @@
 					</div>
 				</div>
 			</section>
+
+			<section id="committee">
+				<div class="container">
+					<div class="section-head">
+						<h2>Conference Committee</h2>
+					</div>
+					<div class="columns">
+						<div class="left">
+							<div class="member">
+								<div class="title">General Coordinator</div>
+								<div class="name">Justin Chen</div>
+							</div>
+							<div class="member">
+								<div class="title">Workshop Coordinator</div>
+								<div class="name">Dan Pechi</div>
+							</div>
+							<div class="member">
+								<div class="title">Panel Coordinator</div>
+								<div class="name">Nikhil Murthy</div>
+							</div>
+							<div class="member">
+								<div class="title">Sponsorship Coordinator</div>
+								<div class="name">Charles Ma</div>
+							</div>
+							<div class="member">
+								<div class="title">Sponsorship Coordinator</div>
+								<div class="name">Chloe Kaubisch</div>
+							</div>
+							<div class="member">
+								<div class="title">Community Outreach</div>
+								<div class="name">Bristy Sikder</div>
+							</div>
+							<div class="member">
+								<div class="title">Marketing</div>
+								<div class="name">Darius Lam</div>
+							</div>
+						</div>
+						<div class="right">
+							<div class="member">
+								<div class="title">Branding</div>
+								<div class="name">Tammy Qiu</div>
+							</div>
+							<div class="member">
+								<div class="title">Website</div>
+								<div class="name">Devin de Hueck</div>
+							</div>
+							<div class="member">
+								<div class="title">Logistics</div>
+								<div class="name">Duy Nguyen</div>
+							</div>
+							<div class="member">
+								<div class="title">Finance</div>
+								<div class="name">Ajay Jain</div>
+							</div>
+							<div class="member">
+								<div class="title">Finance</div>
+								<div class="name">Matthew Feng</div>
+							</div>
+							<div class="member">
+								<div class="title">Diversity scholarship chair</div>
+								<div class="name">Rachel Manzelli</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
+
 		</main>
 		
 		<footer>
