--- a/index.html
+++ b/index.html
@@ -185,6 +185,10 @@
 						</div>
 						<div class="right">
 							<div class="member">
+								<div class="title">General Coordinator</div>
+								<div class="name">Parth Shah</div>
+							</div>
+							<div class="member">
 								<div class="title">Branding</div>
 								<div class="name">Tammy Qiu</div>
 							</div>
