--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 				<li><a href="#committee">Conference Committee</a></li>
 			</ul>
 			<div class="cta">
-				<a href="https://www.eventbrite.com/" class="cta-button">Attend</a>
+				<a href="https://bumic.typeform.com/to/eVgtGg" class="cta-button">Attend</a>
 				<a href="#" class="cta-button">Become a Sponsor</a>
 			</div>
 		</nav>
@@ -42,7 +42,7 @@
 						</div>
 					</div>
 					<div class="cta">
-						<a href="https://www.eventbrite.com/" class="cta-button">Attend</a>
+						<a href="https://bumic.typeform.com/to/eVgtGg" class="cta-button">Attend</a>
 					</div>
 				</div>
 			</section>
@@ -227,7 +227,7 @@
 							<img src="images/mic-logo.png" alt="MIC Conference Logo">
 						</div>
 						<div class="cta">
-							<a href="https://www.eventbrite.com/" class="cta-button">Attend</a>
+							<a href="https://bumic.typeform.com/to/eVgtGg" class="cta-button">Attend</a>
 						</div>
 					</div>
 					<div class="bottom">
