Slight change to committee section

--- a/index.html
+++ b/index.html
@@ -154,9 +154,9 @@
 					</div>
 					<div class="columns">
 						<div class="left">
-							<div class="member">
-								<div class="title">General Coordinator</div>
-								<div class="name">Justin Chen</div>
+							<div class="members">
+								<div class="title">Head Coordinators</div>
+								<div class="names">Justin Chen, Parth Shah, Ajay Jain</div>
 							</div>
 							<div class="member">
 								<div class="title">Workshop Coordinator</div>
@@ -185,10 +185,6 @@
 						</div>
 						<div class="right">
 							<div class="member">
-								<div class="title">General Coordinator</div>
-								<div class="name">Parth Shah</div>
-							</div>
-							<div class="member">
 								<div class="title">Branding</div>
 								<div class="name">Tammy Qiu</div>
 							</div>
@@ -199,10 +195,6 @@
 							<div class="member">
 								<div class="title">Logistics</div>
 								<div class="name">Duy Nguyen</div>
-							</div>
-							<div class="member">
-								<div class="title">Finance</div>
-								<div class="name">Ajay Jain</div>
 							</div>
 							<div class="member">
 								<div class="title">Finance</div>
