Minor committee updates

--- a/index.html
+++ b/index.html
@@ -201,6 +201,10 @@
 								<div class="name">Matthew Feng</div>
 							</div>
 							<div class="member">
+								<div class="title">Finance</div>
+								<div class="name">Isaac Wolverton</div>
+							</div>
+							<div class="member">
 								<div class="title">Diversity scholarship chair</div>
 								<div class="name">Rachel Manzelli</div>
 							</div>
