--- a/index.html
+++ b/index.html
@@ -140,9 +140,12 @@
 						<div class="sponsor-tile">
 							<a href="https://www.malong.com/" target="_blank" rel="noopener noreferrer"><img src="images/sponsors/malong-technologies-logo.png" alt="Malong Technologies Logo"></a>
 						</div>
+            <div class="sponsor-tile">
+              <a href="http://www.nvidia.com/" target="_blank" rel="noopener noreferrer"><img src="images/sponsors/nvidia-logo.jpg" alt="Nvidia Logo"></a>
+            </div>
 					</div>
 					<div class="become-sponsor">
-						<a href="#" class="cta-button">Become A Sponsor</a>
+						<a href="mailto:bumic@bu.edu" class="cta-button">Become A Sponsor</a>
 					</div>
 				</div>
 			</section>
@@ -178,16 +181,12 @@
 								<div class="title">Community Outreach</div>
 								<div class="name">Bristy Sikder</div>
 							</div>
-							<div class="member">
-								<div class="title">Marketing</div>
-								<div class="name">Darius Lam</div>
-							</div>
 						</div>
 						<div class="right">
 							<div class="member">
-								<div class="title">Branding</div>
-								<div class="name">Tammy Qiu</div>
-							</div>
+                <div class="title">Marketing</div>
+                <div class="name">Darius Lam</div>
+              </div>
 							<div class="member">
 								<div class="title">Website</div>
 								<div class="name">Devin de Hueck</div>
