Update conference description

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 					</div>
 					<div class="about-conference">
 						<h3>This Conference</h3>
-						<p>The Machine Intelligence Conference will be held annually by all constituent MIC schools. Our mission for this conference is to bring together students, professors, and industry professionals to network and accelerate progress in artificial intelligence.</p>
+						<p>The Machine Intelligence Conference will be held annually by all constituent MIC schools. Our mission for this conference is to democratize machine intelligence, promote diversity, build community, and inspire the next generation of researchers and engineers.</p>
 					</div>
 					<div class="about-mic">
 						<h3>The Machine Intelligence Community - MIC</h3>
