--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
 						<a class="code-of-conduct" href="http://confcodeofconduct.com/"> Conference Code of Conduct</a>
 						<div class="social-links">
 							<a href="https://www.facebook.com/events/339954023078301/"><img src="images/social-media-icons/facebook-icon.png" alt=""></a>
-							<a href="https://twitter.com/@bumic_"><img src="images/social-media-icons/twitter-icon.png" alt=""></a>
+							<a href="https://twitter.com/mic_conf"><img src="images/social-media-icons/twitter-icon.png" alt=""></a>
 							<a href="https://medium.com/mit-mic"><img src="images/social-media-icons/medium-icon.png" alt=""></a>
 						</div>
 					</div>
