--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 							</div>
 							<div class="member">
 								<div class="title">Panel Coordinator</div>
-								<div class="name">Nikhil Murthy</div>
+								<div class="name">Nikhil Murthy, Mirac Suzgun</div>
 							</div>
 							<div class="member">
 								<div class="title">Sponsorship Coordinator</div>
