Stopped background animation when tab is no longer visible to reduce burden on user's computer

--- a/index.html
+++ b/index.html
@@ -140,9 +140,9 @@
 						<div class="sponsor-tile">
 							<a href="https://www.malong.com/" target="_blank" rel="noopener noreferrer"><img src="images/sponsors/malong-technologies-logo.png" alt="Malong Technologies Logo"></a>
 						</div>
-            <div class="sponsor-tile">
-              <a href="http://www.nvidia.com/" target="_blank" rel="noopener noreferrer"><img src="images/sponsors/nvidia-logo.jpg" alt="Nvidia Logo"></a>
-            </div>
+						<div class="sponsor-tile">
+							<a href="http://www.nvidia.com/" target="_blank" rel="noopener noreferrer"><img src="images/sponsors/nvidia-logo.jpg" alt="Nvidia Logo"></a>
+						</div>
 					</div>
 					<div class="become-sponsor">
 						<a href="mailto:bumic@bu.edu" class="cta-button">Become A Sponsor</a>
@@ -177,10 +177,10 @@
 								<div class="title">Community Outreach</div>
 								<div class="name">Bristy Sikder</div>
 							</div>
-              <div class="member">
-                <div class="title">Marketing</div>
-                <div class="name">Darius Lam</div>
-              </div>
+							<div class="member">
+								<div class="title">Marketing</div>
+								<div class="name">Darius Lam</div>
+							</div>
 						</div>
 						<div class="right">
 							<div class="member">
@@ -233,6 +233,7 @@
 				</div>
 			</div>
 		</footer>
+		<script src="js/handle-animation.js"></script>
 		<script src="js/particles/particles.min.js"></script>
 		<script src="js/particles/app.js"></script>
 		<script>
