--- a/index.html
+++ b/index.html
@@ -140,6 +140,9 @@
 						<div class="sponsor-tile">
 							<a href="https://www.malong.com/" target="_blank" rel="noopener noreferrer"><img src="images/sponsors/malong-technologies-logo.png" alt="Malong Technologies Logo"></a>
 						</div>
+            <div class="sponsor-tile">
+              <a href="https://www.intel.com/" target="_blank" rel="noopener noreferrer"><img src="images/sponsors/intel-logo.png" alt="Intel Logo"></a>
+            </div>
 						<div class="sponsor-tile">
 							<a href="http://www.nvidia.com/" target="_blank" rel="noopener noreferrer"><img src="images/sponsors/nvidia-logo.jpg" alt="Nvidia Logo"></a>
 						</div>
@@ -174,33 +177,33 @@
 								<div class="name">Charles Ma</div>
 							</div>
 							<div class="member">
-								<div class="title">Community Outreach</div>
+								<div class="title">Community Outreach Coordinator</div>
 								<div class="name">Bristy Sikder</div>
 							</div>
 							<div class="member">
-								<div class="title">Marketing</div>
+								<div class="title">Marketing Coordinator</div>
 								<div class="name">Darius Lam</div>
 							</div>
 						</div>
 						<div class="right">
 							<div class="member">
-								<div class="title">Website</div>
+								<div class="title">Website Coordinator</div>
 								<div class="name">Devin de Hueck</div>
 							</div>
 							<div class="member">
-								<div class="title">Logistics</div>
+								<div class="title">Logistics Coordinator</div>
 								<div class="name">Duy Nguyen</div>
 							</div>
 							<div class="member">
-								<div class="title">Finance</div>
+								<div class="title">Finance Coordinator</div>
 								<div class="name">Matthew Feng</div>
 							</div>
 							<div class="member">
-								<div class="title">Finance</div>
+								<div class="title">Finance Coordinator</div>
 								<div class="name">Isaac Wolverton</div>
 							</div>
 							<div class="member">
-								<div class="title">Diversity scholarship chair</div>
+								<div class="title">Diversity Scholarship Chair</div>
 								<div class="name">Chloe Kaubisch</div>
 							</div>
 						</div>
