--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 			</ul>
 			<div class="cta">
 				<a href="https://bumic.typeform.com/to/eVgtGg" class="cta-button">Attend</a>
-				<a href="#" class="cta-button">Become a Sponsor</a>
+				<a href="mailto:sponsors@machineintelligence.cc" class="cta-button">Become a Sponsor</a>
 			</div>
 		</nav>
 
@@ -55,12 +55,14 @@
 					<div class="about-conference">
 						<h3>This Conference</h3>
 						<p>The Machine Intelligence Conference will be held annually by all constituent MIC schools. Our mission for this conference is to democratize machine intelligence, promote diversity, build community, and inspire the next generation of researchers and engineers.</p>
+						<p><strong>Please note: </strong> There is a limit of 400 attendees to this inaugural conference. Student sign-ups will be prioritized and non .edu emails will not receive a confirmation email, but will not lose a place in the sign-up queue.</p>
 					</div>
 					<div class="about-mic">
 						<h3>The Machine Intelligence Community - MIC</h3>
 						<p>The idea behind the Machine Intelligence Community originated from the MIT Machine Learning Reading Group. The reading group started with students looking for an environment to learn about research advances in machine learning. The Machine Intelligence Community currently has branches at MIT, Boston University, Harvard, and Tufts.</p>
 						<p>The Machine Intelligence Community has a set of core values it stands to uphold. All Machine Intelligence Community organizations must uphold these values.</p>
-						<p><strong>1. Openness.</strong> The Machine Intelligence Community is inclusive and diverse.</p><p><strong>2. Education First.</strong> We aim to provide surface area for intellectual engagement. Our primary focus is teaching members and the community at-large about machine intelligence.</p>
+						<p><strong>1. Openness.</strong> The Machine Intelligence Community is inclusive and diverse.</p>
+						<p><strong>2. Education.</strong> We aim to provide surface area for intellectual engagement. Our primary focus is teaching members and the community at-large about machine intelligence.</p>
 						<p><strong>3. Community.</strong> By doing this, we hope to cultivate and connect communities and like-minded students to accelerate progress in machine intelligence.</p>
 					</div>
 				</div>
@@ -138,17 +140,17 @@
 					</div>
 					<div class="sponsor-grid">
 						<div class="sponsor-tile">
-							<a href="https://www.malong.com/" target="_blank" rel="noopener noreferrer"><img src="images/sponsors/malong-technologies-logo.png" alt="Malong Technologies Logo"></a>
+							<a href="https://www.malong.com/" target="_blank" rel="noopener noreferrer"><img src="images/sponsors/malong-technologies-logo.png" class="tier-one" alt="Malong Technologies Logo"></a>
 						</div>
-            <div class="sponsor-tile">
-              <a href="https://www.intel.com/" target="_blank" rel="noopener noreferrer"><img src="images/sponsors/intel-logo.png" alt="Intel Logo"></a>
-            </div>
+						<div class="sponsor-tile">
+							<a href="https://www.intel.com/" target="_blank" rel="noopener noreferrer"><img src="images/sponsors/intel-logo.png" class="tier-one" alt="Intel Logo"></a>
+						</div>
 						<div class="sponsor-tile">
 							<a href="http://www.nvidia.com/" target="_blank" rel="noopener noreferrer"><img src="images/sponsors/nvidia-logo.jpg" alt="Nvidia Logo"></a>
 						</div>
 					</div>
 					<div class="become-sponsor">
-						<a href="mailto:bumic@bu.edu" class="cta-button">Become A Sponsor</a>
+						<a href="mailto:sponsors@machineintelligence.cc" class="cta-button">Become A Sponsor</a>
 					</div>
 				</div>
 			</section>
@@ -162,7 +164,7 @@
 						<div class="left">
 							<div class="members">
 								<div class="title">Head Coordinators</div>
-								<div class="names">Justin Chen, Parth Shah, Ajay Jain</div>
+								<div class="names">Justin Chen, Ajay Jain</div>
 							</div>
 							<div class="member">
 								<div class="title">Workshop Coordinator</div>
@@ -172,31 +174,11 @@
 								<div class="title">Panel Coordinator</div>
 								<div class="name">Nikhil Murthy, Mirac Suzgun</div>
 							</div>
-							<div class="member">
-								<div class="title">Sponsorship Coordinator</div>
-								<div class="name">Charles Ma</div>
-							</div>
-							<div class="member">
-								<div class="title">Community Outreach Coordinator</div>
-								<div class="name">Bristy Sikder</div>
-							</div>
-							<div class="member">
-								<div class="title">Marketing Coordinator</div>
-								<div class="name">Darius Lam</div>
-							</div>
 						</div>
 						<div class="right">
 							<div class="member">
 								<div class="title">Website Coordinator</div>
 								<div class="name">Devin de Hueck</div>
-							</div>
-							<div class="member">
-								<div class="title">Logistics Coordinator</div>
-								<div class="name">Duy Nguyen</div>
-							</div>
-							<div class="member">
-								<div class="title">Finance Coordinator</div>
-								<div class="name">Matthew Feng</div>
 							</div>
 							<div class="member">
 								<div class="title">Finance Coordinator</div>
