--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 			</ul>
 			<div class="cta">
 				<a href="https://bumic.typeform.com/to/eVgtGg" class="cta-button">Attend</a>
-				<a href="#" class="cta-button">Become a Sponsor</a>
+				<a href="mailto:sponsors@machineintelligence.cc" class="cta-button">Become a Sponsor</a>
 			</div>
 		</nav>
 
