fixed small apostrophe issue

--- a/call-for-abstracts.html
+++ b/call-for-abstracts.html
@@ -29,11 +29,11 @@
 					<h2>Abstracts</h2>
 					<a href="https://openreview.net/group?id=machineintelligence.cc/MIC/2018/Abstract" class="cta-button">Submit to Abstract Track</a>
 				</div>
-				<p>Submissions must be no longer than 2 pages including references. Students should submit an abstract on OpenReview in the Abstract Track. Abstract submissions should include the following: title; the applicant’s full name and affiliation, graduation year, phone number, gender, and e-mail address; all coauthors’ full names and affiliations; text; and any figures, tables, or diagrams. Any supplemental material relating to the abstract including videos, datasets, or software is also welcomed.</p>
+				<p>Submissions must be no longer than 2 pages including references. Students should submit an abstract on OpenReview in the Abstract Track. Abstract submissions should include the following: title; the applicant's full name and affiliation, graduation year, phone number, gender, and e-mail address; all coauthors' full names and affiliations; text; and any figures, tables, or diagrams. Any supplemental material relating to the abstract including videos, datasets, or software is also welcomed.</p>
 			</div>
 			<div id="conference">
 				<h2>Conference</h2>
-				<p>Abstract submissions approved by the review team will be given presentation time and space at the conference’s poster session. Student authors will be contacted by conference organizers regarding acceptance to the conference track on a rolling basis. Posters must be 36 by 48 inches and should be submitted on OpenReview in the Conference Track.</p>
+				<p>Abstract submissions approved by the review team will be given presentation time and space at the conference's poster session. Student authors will be contacted by conference organizers regarding acceptance to the conference track on a rolling basis. Posters must be 36 by 48 inches and should be submitted on OpenReview in the Conference Track.</p>
 			</div>
 			<div id="acceptance-policies">
 				<h2>Acceptance Policies</h2>
