Added second title to committee member

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 								<div class="names">Justin Chen, Ajay Jain</div>
 							</div>
 							<div class="member">
-								<div class="title">Workshop Coordinator</div>
+								<div class="title">Workshop Coordinator and Community Outreach</div>
 								<div class="name">Dan Pechi</div>
 							</div>
 							<div class="member">
