Added facebook logo and updated committee section

--- a/index.html
+++ b/index.html
@@ -147,7 +147,10 @@
 							<a href="https://www.intel.com/" target="_blank" rel="noopener noreferrer"><img src="images/sponsors/intel-logo.png" class="tier-one" alt="Intel Logo"></a>
 						</div>
 						<div class="sponsor-tile">
-							<a href="http://www.nvidia.com/" target="_blank" rel="noopener noreferrer"><img src="images/sponsors/nvidia-logo.jpg" alt="Nvidia Logo"></a>
+							<a href="http://www.nvidia.com/" target="_blank" rel="noopener noreferrer"><img src="images/sponsors/nvidia-logo.jpg" class="tier-two" alt="Nvidia Logo"></a>
+						</div>
+						<div class="sponsor-tile">
+							<a href="http://www.facebook.com/" target="_blank" rel="noopener noreferrer"><img src="images/sponsors/facebook-logo.jpg" class="tier-two" alt="Facebook Logo"></a>
 						</div>
 					</div>
 					<div class="become-sponsor">
@@ -175,12 +178,12 @@
 								<div class="title">Panel Coordinator</div>
 								<div class="name">Nikhil Murthy, Mirac Suzgun</div>
 							</div>
-						</div>
-						<div class="right">
 							<div class="member">
 								<div class="title">Website Coordinator</div>
 								<div class="name">Devin de Hueck</div>
 							</div>
+						</div>
+						<div class="right">
 							<div class="member">
 								<div class="title">Finance Coordinator</div>
 								<div class="name">Isaac Wolverton</div>
@@ -188,6 +191,10 @@
 							<div class="member">
 								<div class="title">Diversity Scholarship Chair</div>
 								<div class="name">Chloe Kaubisch</div>
+							</div>
+							<div class="member">
+								<div class="title">Sponsorship Chair</div>
+								<div class="name">Charles Ma</div>
 							</div>
 						</div>
 					</div>
