Modified call for submissions page

--- a/call-for-submissions.html
+++ b/call-for-submissions.html
@@ -1,17 +1,17 @@
 <html lang="en">
 	<head>
-		<title>MIC Conference Call For Abstracts</title>
+		<title>MIC Conference Call For Submissions</title>
 		<meta name="viewport" content="width=device-width" />
 		<link rel="shortcut icon" type="image/png" href="images/favicon.png"/>
 		<link href="https://fonts.googleapis.com/css?family=Lato:100,400,700,900" rel="stylesheet">
 		<link rel="stylesheet" href="css/style.css">
 		<link rel="stylesheet" href="css/mobile.css">
-		<link rel="stylesheet" href="css/call-for-abstracts.css">
+		<link rel="stylesheet" href="css/call-for-submissions.css">
 	</head>
 	<body>
 		<header>
 			<a href="./index.html"><img src="images/mic-logo.png" alt="MIC Logo"></a>
-			<h1>Machine Intelligence Conference Call for Abstracts</h1>
+			<h1>Machine Intelligence Conference Call for Submissions</h1>
 		</header>
 		<main>
 			<div id=submission-policies>
@@ -32,7 +32,10 @@
 				<p>Submissions must be no longer than 2 pages including references. Students should submit an abstract on OpenReview in the Abstract Track. Abstract submissions should include the following: title; the applicant's full name and affiliation, graduation year, phone number, gender, and e-mail address; all coauthors' full names and affiliations; text; and any figures, tables, or diagrams. Any supplemental material relating to the abstract including videos, datasets, or software is also welcomed.</p>
 			</div>
 			<div id="conference">
-				<h2>Conference</h2>
+				<div class="p-btn-head">
+          <h2>Conference</h2>
+          <a href="https://openreview.net/group?id=machineintelligence.cc/MIC/2018/Conference" class="cta-button">Submit to Conference Track</a>
+        </div>
 				<p>Abstract submissions approved by the review team will be given presentation time and space at the conference's poster session. Student authors will be contacted by conference organizers regarding acceptance to the conference track on a rolling basis. Posters must be 36 by 48 inches and should be submitted on OpenReview in the Conference Track.</p>
 			</div>
 			<div id="acceptance-policies">
