--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 					</div>
 					<div class="cta">
 						<a href="https://bumic.typeform.com/to/eVgtGg" class="cta-button">Attend</a>
-						<a href="./call-for-abstracts.html" class="cta-button">Call for Abstracts</a>
+						<a href="./call-for-submissions.html" class="cta-button">Call for Submissions</a>
 					</div>
 				</div>
 			</section>
