Updated Dan's Email

--- a/call-for-submissions.html
+++ b/call-for-submissions.html
@@ -21,7 +21,7 @@
 				<p>Please contact us if you have questions about registration or need clarification on submissions:</p>
 				<div id="contact-info">
 					<p><strong>General Inquiries:</strong> <a href="mailto:conference@machineintelligence.cc">conference@machineintelligence.cc</a></p>
-					<p><strong>Workshop Coordinator:</strong> <a href="mailto:Daniel.pechi@tufts.edu">daniel.pechi@tufts.edu</a></p>
+					<p><strong>Workshop Coordinator:</strong> <a href="mailto:danpechi@machineintelligence.cc">danpechi@machineintelligence.cc</a></p>
 				</div>
 			</div>
 			<div id="abstracts">
