--- a/call-for-submissions.html
+++ b/call-for-submissions.html
@@ -29,7 +29,7 @@
 					<h2>Abstracts</h2>
 					<a href="https://openreview.net/group?id=machineintelligence.cc/MIC/2018/Abstract" class="cta-button">Submit to Abstract Track</a>
 				</div>
-				<p>Submissions must be no longer than 2 pages including references. Students should submit an abstract on OpenReview in the Abstract Track. Abstract submissions should include the following: title; the applicant's full name and affiliation, graduation year, phone number, gender, and e-mail address; all coauthors' full names and affiliations; text; and any figures, tables, or diagrams. Any supplemental material relating to the abstract including videos, datasets, or software is also welcomed.</p>
+				<p>Submissions must be no longer than 2 pages including references. Students should submit an abstract on OpenReview in the Abstract Track. Abstract submissions should include the following: title; the applicant's full name, affiliation, graduation year, and e-mail address; all coauthors' full names and affiliations; text; and any figures, tables, or diagrams. Any supplemental material relating to the abstract including videos, datasets, or software is also welcomed.</p>
 			</div>
 			<div id="conference">
 				<div class="p-btn-head">
