Added Charles River Analytics Logo

--- a/index.html
+++ b/index.html
@@ -152,6 +152,9 @@
 						<div class="sponsor-tile">
 							<a href="http://www.facebook.com/" target="_blank" rel="noopener noreferrer"><img src="images/sponsors/facebook-logo.jpg" class="tier-two" alt="Facebook Logo"></a>
 						</div>
+            <div class="sponsor-tile">
+              <a href="https://www.cra.com/" target="_blank" rel="noopener noreferrer"><img src="images/sponsors/charles-river-analytics-logo.png" class="tier-three" alt="Charles River Analytics Logo"></a>
+            </div>
 					</div>
 					<div class="become-sponsor">
 						<a href="mailto:sponsors@machineintelligence.cc" class="cta-button">Become A Sponsor</a>
